{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 147,
  "lineage": "d2cafbbe-4869-6c5f-0d21-af4e8f1b09a1",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c270c3bb584bd81",
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:elastic-ip/eipalloc-05c270c3bb584bd81",
            "association_id": "eipassoc-0d9b6fddb815e522f",
            "domain": "vpc",
            "id": "eipalloc-05c270c3bb584bd81",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-03fdb6320fc2b2b17",
            "private_dns": "ip-10-0-1-74.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.74",
            "public_dns": "ec2-52-78-217-120.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.217.120",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab04-eip-natgw-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-eip-natgw-main",
              "Organization": "tf-core",
              "Project": "lab04"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:internet-gateway/igw-043f1b14a3eb9bdf4",
            "id": "igw-043f1b14a3eb9bdf4",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab04-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-igw",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "vpc_id": "vpc-047a14e672679e250"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c270c3bb584bd81",
            "association_id": "eipassoc-0d9b6fddb815e522f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0276ff7b548b65634",
            "network_interface_id": "eni-03fdb6320fc2b2b17",
            "private_ip": "10.0.1.74",
            "public_ip": "52.78.217.120",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-052aa6b10d761cf9f",
            "tags": {
              "Name": "tf-core-lab04-natgw-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-natgw-main",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "vpc_id": "vpc-047a14e672679e250"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-034c2244f9abb9550",
            "id": "rtb-034c2244f9abb9550",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0276ff7b548b65634",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab04-rtb-private-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-rtb-private-a",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "timeouts": null,
            "vpc_id": "vpc-047a14e672679e250"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-034c2244f9abb9550",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-07e660783e9f128cb",
            "id": "rtb-07e660783e9f128cb",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0276ff7b548b65634",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab04-rtb-private-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-rtb-private-b",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "timeouts": null,
            "vpc_id": "vpc-047a14e672679e250"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-07e660783e9f128cb",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-0d6c851344ecfaa99",
            "id": "rtb-0d6c851344ecfaa99",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043f1b14a3eb9bdf4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab04-rtb-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-rtb-public-a",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "timeouts": null,
            "vpc_id": "vpc-047a14e672679e250"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-0d6c851344ecfaa99",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-0b51929ebc162a80d",
            "id": "rtb-0b51929ebc162a80d",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043f1b14a3eb9bdf4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab04-rtb-public-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-rtb-public-b",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "timeouts": null,
            "vpc_id": "vpc-047a14e672679e250"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-0b51929ebc162a80d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed205659493d2866",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-034c2244f9abb9550",
            "subnet_id": "subnet-019cf6e6ca3617c46"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0ed205659493d2866",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_0",
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e630a1020634acbc",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-07e660783e9f128cb",
            "subnet_id": "subnet-0c0140de3478fd79b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0e630a1020634acbc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_1",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e650bf83ad88f52b",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d6c851344ecfaa99",
            "subnet_id": "subnet-052aa6b10d761cf9f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0e650bf83ad88f52b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_0",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b34a61812521787a",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b51929ebc162a80d",
            "subnet_id": "subnet-0636752fe2b02a6c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0b34a61812521787a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_1",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-019cf6e6ca3617c46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019cf6e6ca3617c46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab04-subnet-private-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-subnet-private-a",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "vpc_id": "vpc-047a14e672679e250"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-019cf6e6ca3617c46",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-0c0140de3478fd79b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0140de3478fd79b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab04-subnet-private-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-subnet-private-b",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "vpc_id": "vpc-047a14e672679e250"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-0c0140de3478fd79b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-052aa6b10d761cf9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052aa6b10d761cf9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab04-subnet-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-subnet-public-a",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "vpc_id": "vpc-047a14e672679e250"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-052aa6b10d761cf9f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-0636752fe2b02a6c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0636752fe2b02a6c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab04-subnet-public-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-subnet-public-b",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "vpc_id": "vpc-047a14e672679e250"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-0636752fe2b02a6c0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:vpc/vpc-047a14e672679e250",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c9aa9b3f05569a0e",
            "default_route_table_id": "rtb-06d28b9d4a8ca5ddc",
            "default_security_group_id": "sg-0ec93fa959dcd5334",
            "dhcp_options_id": "dopt-018f05c8d8ab5dc53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047a14e672679e250",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d28b9d4a8ca5ddc",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab04-vpc-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-vpc-main",
              "Organization": "tf-core",
              "Project": "lab04"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "vpc-047a14e672679e250",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:loadbalancer/app/tf-core-lab04-lb-main/8f3b8f5d8fdfc39b",
            "arn_suffix": "app/tf-core-lab04-lb-main/8f3b8f5d8fdfc39b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-core-lab04-lb-main-519942847.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:loadbalancer/app/tf-core-lab04-lb-main/8f3b8f5d8fdfc39b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-core-lab04-lb-main",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-075c94cbc2bb3ee14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052aa6b10d761cf9f"
              },
              {
                "subnet_id": "subnet-0636752fe2b02a6c0"
              }
            ],
            "subnets": [
              "subnet-052aa6b10d761cf9f",
              "subnet-0636752fe2b02a6c0"
            ],
            "tags": {
              "Name": "tf-core-lab04-lb-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-lb-main",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "vpc_id": "vpc-047a14e672679e250",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:loadbalancer/app/tf-core-lab04-lb-main/8f3b8f5d8fdfc39b"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this",
            "module.platform.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:listener/app/tf-core-lab04-lb-main/8f3b8f5d8fdfc39b/8a008bc4baf0758b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab04-tg-main/7c11b3a7a13e589d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:listener/app/tf-core-lab04-lb-main/8f3b8f5d8fdfc39b/8a008bc4baf0758b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:loadbalancer/app/tf-core-lab04-lb-main/8f3b8f5d8fdfc39b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:listener/app/tf-core-lab04-lb-main/8f3b8f5d8fdfc39b/8a008bc4baf0758b"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this",
            "module.platform.aws_lb.this",
            "module.platform.aws_lb_target_group.this",
            "module.platform.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab04-tg-main/7c11b3a7a13e589d",
            "arn_suffix": "targetgroup/tf-core-lab04-tg-main/7c11b3a7a13e589d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab04-tg-main/7c11b3a7a13e589d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:loadbalancer/app/tf-core-lab04-lb-main/8f3b8f5d8fdfc39b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-core-lab04-tg-main",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tf-core-lab04-tg-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-tg-main",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-047a14e672679e250"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab04-tg-main/7c11b3a7a13e589d"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:security-group/sg-075c94cbc2bb3ee14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075c94cbc2bb3ee14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-core-lab04-sg-lb-main",
            "name_prefix": "",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-core-lab04-sg-lb-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-sg-lb-main",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "timeouts": null,
            "vpc_id": "vpc-047a14e672679e250"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "sg-075c94cbc2bb3ee14",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-082ffff62217ce085",
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:instance/i-0868e7842a22742a2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tf-core-lab04-iamprofile-instance-web",
            "id": "i-0868e7842a22742a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-079413a867e705e21"
              }
            ],
            "primary_network_interface_id": "eni-079413a867e705e21",
            "private_dns": "ip-10-0-102-28.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.28",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "Terraform",
                  "Organization": "tf-core",
                  "Project": "lab04"
                },
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Organization": "tf-core",
                  "Project": "lab04"
                },
                "throughput": 125,
                "volume_id": "vol-00fcb4f5c5142956e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0140de3478fd79b",
            "tags": {
              "Name": "tf-core-lab04-instance-web"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-instance-web",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e2d4ebdd69d6e47"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "i-0868e7842a22742a2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this",
            "module.platform.aws_iam_instance_profile.this",
            "module.platform.aws_iam_role.this",
            "module.platform.data.aws_iam_policy.aws_ssm_core_policy",
            "module.platform.data.aws_iam_policy_document.ec2_assume_role_policy",
            "module.workload.aws_security_group.this",
            "module.workload.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.workload",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab04-tg-main/7c11b3a7a13e589d,i-0868e7842a22742a2,80",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab04-tg-main/7c11b3a7a13e589d",
            "target_id": "i-0868e7842a22742a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab04-tg-main/7c11b3a7a13e589d",
            "target_id": "i-0868e7842a22742a2"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this",
            "module.platform.aws_iam_instance_profile.this",
            "module.platform.aws_iam_role.this",
            "module.platform.aws_lb.this",
            "module.platform.aws_lb_listener.this",
            "module.platform.aws_lb_target_group.this",
            "module.platform.aws_security_group.this",
            "module.platform.data.aws_iam_policy.aws_ssm_core_policy",
            "module.platform.data.aws_iam_policy_document.ec2_assume_role_policy",
            "module.workload.aws_instance.this",
            "module.workload.aws_security_group.this",
            "module.workload.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:security-group/sg-01e2d4ebdd69d6e47",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e2d4ebdd69d6e47",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-core-lab04-sg-instance-web",
            "name_prefix": "",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-core-lab04-sg-instance-web"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab04-sg-instance-web",
              "Organization": "tf-core",
              "Project": "lab04"
            },
            "timeouts": null,
            "vpc_id": "vpc-047a14e672679e250"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "sg-01e2d4ebdd69d6e47",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this",
            "module.platform.aws_iam_instance_profile.this",
            "module.platform.aws_iam_role.this",
            "module.platform.data.aws_iam_policy.aws_ssm_core_policy",
            "module.platform.data.aws_iam_policy_document.ec2_assume_role_policy",
            "module.workload.data.aws_ami.amazon_linux"
          ]
        }
      ]
    }
  ]
}